--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -13,11 +13,17 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/favoriteButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="お気に入り"/>
+        <ImageView
+            android:id="@+id/favoriteImageView"
+            android:layout_width="61dp"
+            android:layout_height="54dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_star"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@android:color/holo_orange_light" />
 
         <WebView
             android:id="@+id/webView"
